# nturt_radio_communicator

./: CMakeLists.txt  README.md  log.txt  package.xml
app/: radio_receiver_node.cpp  radio_sender_node.cpp
include/nturt_radio_communicator/: radio_communicator.hpp  radio_communicator_protocol.hpp
launch/: nturt_radio_communicator.launch.py
prototype/: receiver  receiver_prototype.cpp  reciever  reciever_prototype.cpp  sender  sender_prototype.cpp
src/: radio_receiver.cpp  radio_sender.cpp
